--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div>
-        <a href="home.html">HOME</a>
+        <a href="index.html">HOME</a>
         <a href="project.html">PROJECT</a>
         <a href="expriment.html">EXPRIMENT</a>
         <a href="result.html">RESULT</a>
